# cerestest

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/qyh/cerestest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/qyh/cerestest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/qyh/cerestest/: ExampleUnitTest.java
ceresbuild/: config.sh
cereslib/src/androidTest/java/com/qyh/cereslib/: ExampleInstrumentedTest.java
cereslib/src/main/: AndroidManifest.xml
cereslib/src/main/cpp/: CMakeLists.txt
cereslib/src/main/cpp/ceres/: CMakeLists.txt
cereslib/src/main/res/values/: strings.xml
cereslib/src/test/java/com/qyh/cereslib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
